--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "parcel build src/index.html -d build/ --public-url ./",
     "deploy": "yarn build && yarn deploy-surge",
     "deploy-surge": "surge --project build --domain https://memoricle.surge.sh",
-    "clean": "rimraf dist && rimraf build"
+    "clean": "rimraf dist && rimraf build",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "prepush": "yarn format"
   },
   "dependencies": {
     "moment": "^2.21.0",
@@ -26,8 +28,23 @@
     "babel-preset-react": "^6.24.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.1.0",
+    "husky": "^1.1.3",
+    "lint-staged": "^8.0.4",
     "parcel-bundler": "^1.6.2",
+    "prettier": "^1.14.3",
     "rimraf": "^2.6.2",
     "surge": "^0.20.1"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "yarn format",
+      "git add"
+    ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false,
+    "printWidth": 80,
+    "tabWidth": 2
   }
 }
