--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "^3.1.0",
     "husky": "^1.1.3",
     "lint-staged": "^8.0.4",
+    "node-sass": "^4.10.0",
     "parcel-bundler": "^1.6.2",
     "prettier": "^1.14.3",
     "rimraf": "^2.6.2",
