--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "prepush": "yarn format"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "moment": "^2.21.0",
-    "react": "^16.2.0",
+    "react": "16.5.2",
     "react-dom": "^16.2.0",
+    "react-map-gl": "^4.0.0",
     "react-router-dom": "^4.2.2",
     "react-toggle": "^4.0.2",
     "styled-components": "^3.2.3",
