--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "moment": "^2.21.0",
+    "polished": "^2.3.0",
     "react": "16.5.2",
     "react-dom": "^16.2.0",
     "react-map-gl": "^4.0.0",
