--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "google-maps-react": "^2.0.2",
     "moment": "^2.21.0",
     "polished": "^2.3.0",
     "react": "16.5.2",
