--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "axios": "^0.18.0",
     "google-maps-react": "^2.0.2",
     "moment": "^2.21.0",
     "polished": "^2.3.0",
     "react": "16.5.2",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.2.2",
     "react-toggle": "^4.0.2",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^3.2.3",
     "styled-flex-component": "^2.2.2"
   },
