--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "parcel-bundler": "^1.6.2",
     "prettier": "^1.14.3",
     "rimraf": "^2.6.2",
-    "surge": "^0.20.1"
+    "surge": "^0.20.1",
+    "typescript": "^3.1.6"
   },
   "lint-staged": {
     "*.{js,jsx}": [
