--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@types/react": "^16.7.7",
+    "@types/react-dom": "^16.0.11",
     "axios": "^0.18.0",
     "google-maps-react": "^2.0.2",
     "moment": "^2.21.0",
