--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^6.0.10",
+    "@types/react-router-dom": "^4.3.1",
     "axios": "^0.18.0",
     "google-maps-react": "^2.0.2",
     "moment": "^2.21.0",
