--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-    "presets": ["env", "react", "flow"],
-    "plugins": [
-        "transform-class-properties"
-    ]
+  "presets": ["env", "react"],
+  "plugins": ["transform-class-properties"]
 }
