--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^3.2.3",
-    "styled-flex-component": "^2.2.2"
+    "styled-flex-component": "^2.2.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
