--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-redux": "^6.0.10",
     "@types/react-router-dom": "^4.3.1",
     "axios": "^0.18.0",
+    "firebase": "^5.5.9",
     "google-maps-react": "^2.0.2",
     "moment": "^2.21.0",
     "polished": "^2.3.0",
