--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@types/google-maps-react": "^2.0.0",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^6.0.10",
     "@types/react-router-dom": "^4.3.1",
     "axios": "^0.18.0",
+    "firebase": "^5.5.9",
     "google-maps-react": "^2.0.2",
     "moment": "^2.21.0",
     "polished": "^2.3.0",
