--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-redux": "^6.0.10",
     "@types/react-router-dom": "^4.3.1",
     "axios": "^0.18.0",
+    "dateformat": "^3.0.3",
     "exif-js": "^2.3.0",
     "firebase": "^5.5.9",
     "google-maps-react": "^2.0.2",
