--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.9.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
