--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "dateformat": "^3.0.3",
     "exif-js": "^2.3.0",
     "firebase": "^5.5.9",
+    "formik": "^1.3.2",
     "google-maps-react": "^2.0.2",
     "immer": "^1.8.0",
     "moment": "^2.21.0",
     "polished": "^2.3.0",
-    "react": "16.5.2",
+    "react": "16.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.2.2",
