--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^6.0.10",
     "@types/react-router-dom": "^4.3.1",
+    "@types/uuid": "^3.4.4",
+    "@types/yup": "^0.26.2",
     "axios": "^0.18.0",
     "dateformat": "^3.0.3",
+    "dotty": "^0.1.0",
     "exif-js": "^2.3.0",
     "firebase": "^5.5.9",
     "formik": "^1.3.2",
@@ -39,7 +42,8 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^3.2.3",
     "styled-flex-component": "^2.2.2",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "yup": "^0.26.6"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.9.2",
