--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/google-maps-react": "^2.0.0",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.11",
+    "@types/react-places-autocomplete": "^7.2.0",
     "@types/react-redux": "^6.0.10",
     "@types/react-router-dom": "^4.3.1",
     "@types/uuid": "^3.4.4",
@@ -35,6 +36,7 @@
     "polished": "^2.3.0",
     "react": "16.0",
     "react-dom": "^16.2.0",
+    "react-places-autocomplete": "^7.2.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.2.2",
     "react-toggle": "^4.0.2",
